[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = ["AlexY0905 <1964937517@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexY0905/filecoin-ffi-yst-1.git"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = "0.6.0"
byteorder = "1.2"
drop_struct_macro_derive = "0.4.0"
ff = { version = "0.2.1", package = "fff" }
ffi-toolkit = "0.4.0"
libc = "0.2.58"
log = "0.4.7"
fil_logger = "0.1.0"
rand = "0.7"
rand_chacha = "0.2.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { version = "0.12.0", default-features = false, features = ["gpu"] }
serde_json = "1.0.46"
rust-gpu-tools = "0.2.0"

[dependencies.filecoin-proofs-api]
git = "https://github.com/AlexY0905/filecoin-proofs-api-yst-1.git"
rev = "2aaab53"
default-features = false

[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.0.8"

[features]
default = ["pairing"]
pairing = ["filecoin-proofs-api/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-api/blst", "bellperson/blst"]